--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>site</title>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
+    <script data-main="js/main.js" src="bower_components/requirejs/require.js"></script>
   </head>
   <body>
     <header class="header">
@@ -24,6 +25,5 @@
     <footer class="footer">
       &copy; 2016 Jan Kos
     </footer>
-    <script src="script.js"></script>
   </body>
 </html>
