--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="header">
 
-      <h1><a href="#">site / <span class="links"></span></a></h1>
+      <h1><a href="#">site // <span class="links"></span></a></h1>
 
     </header>
     <nav class="menu">
